monitoring/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: faraja-gateway
      namespace: faraja-ns
  hostnames:
    - grafana.faraja.kubeverse.io
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
